--- a/page-fatcalc.hbs
+++ b/page-fatcalc.hbs
@@ -40,9 +40,9 @@
         
         {{/post}}
         
-        <table align="left" border="2" cellpadding="0" cellspacing="3" height="463" rules="none" width="522" style="background-color: #Eeeeee">
+        <table align="center">
             <tbody>
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>&nbsp;
                     </td>
                     <td>
@@ -52,7 +52,7 @@
                         </select>
                     </td>
                 </tr>
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>
                         <strong>Methode:</strong></td>
                     <td>
@@ -62,65 +62,65 @@
                         </select>
                     </td>
                 </tr>
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>
                         <strong>Brust:</strong></td>
                     <td>
                         <input id="brust_falte" name="caliper_input" type="text"> [mm]</td>
                 </tr>
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>
                         <strong>Bauch:</strong></td>
                     <td>
                         <input id="bauch_falte" name="caliper_input" type="text"> [mm]</td>
                 </tr>
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>
                         <strong>Oberschenkel:</strong></td>
                     <td>
                         <input id="oberschenkel_falte" name="caliper_input" type="text"> [mm]</td>
                 </tr>
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>
                         <strong>Schulterblatt:</strong></td>
                     <td>
-                        <input disabled="disabled" id="schulterblatt_falte" name="caliper_input" style="background-color: #222222;" type="text"> [mm]</td>
+                        <input disabled="disabled" id="schulterblatt_falte" name="caliper_input" type="text"> [mm]</td>
                 </tr>
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>
                         <strong>Trizeps:</strong></td>
                     <td>
-                        <input disabled="disabled" id="trizeps_falte" name="caliper_input" style="background-color: #222222;" type="text"> [mm]</td>
+                        <input disabled="disabled" id="trizeps_falte" name="caliper_input" type="text"> [mm]</td>
                 </tr>
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>
                         <strong>Achsel:</strong></td>
                     <td>
                         <input disabled="disabled" id="achsel_falte" name="caliper_input" style="background-color: #222222;" type="text"> [mm]</td>
                 </tr>
 
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>
                         <strong>Hüfte:</strong></td>
                     <td>
-                        <input disabled="disabled" id="hueft_falte" name="caliper_input" style="background-color: #222222;" type="text"> [mm]</td>
+                        <input disabled="disabled" id="hueft_falte" name="caliper_input" type="text"> [mm]</td>
                 </tr>
 
 
 
 
-                <tr style="font-size: 13px;">
-                    <td height="70">
+                <tr>
+                    <td>
                         <strong>Alter:</strong></td>
                     <td>
                         <input id="caliper_alter" name="caliper_input" type="text"> [Jahr]</td>
                 </tr>
 
-                <tr style="font-size: 13px;">
+                <tr>
                     <td>
                         <strong>Ergebnis Körperfettanteil:</strong></td>
                     <td>
-                        <input style="color = #ff0000" id="caliper_fat_result" name="caliper_input" type="text" readonly> [%]</td>
+                        <input id="caliper_fat_result" name="caliper_input" type="text" readonly> [%]</td>
                 </tr>
                 <tr>
                     <td>&nbsp;
