--- a/page-fatcalc.hbs
+++ b/page-fatcalc.hbs
@@ -11,18 +11,14 @@
     <meta name="description" content="{{meta_description}}">
 
     <link rel="stylesheet" href="{{asset "css/style.css"}}">
-    <link rel="stylesheet" href="{{asset "css/fatcalc.css"}}">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700">
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{@blog.logo}}">
     <link rel="shortcut icon" href="{{@blog.logo}}"> {{ghost_head}}
-
+    
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
-<script type="text/javascript">
-    var xr_xr = document.getElementById("xr_xr")
-
-</script>
 
 <body style="background:url('{{@blog.cover}}');background-size:cover;background-attachment:fixed;">
 
@@ -41,207 +37,167 @@
         
         {{/post}}
         
-        <select id="caliper_gender" name="caliper_gender" onChange="caliper_onGenderChange()">
-                            <option value="0">Male</option>
-                            <option value="1">Female</option>
-                        </select>
-        <select id="caliper_method" name="caliper_method" onChange="caliper_onMethodChange()">
-                            <option value="31">3-Falten Methode nach Jackson-Pollock</option>
-                            <option value="7">7-Falten Methode nach Jackson-Pollock</option>
-                        </select>
-         <form>
-    
-    <div class="group">      
-      <input type="text" id="brust_falte" name="caliper_input" required>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Brust</label>
-    </div>
-      
-    <div class="group">      
-      <input type="text" id="bauch_falte" name="caliper_input" required>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Bauch</label>
-    </div>
-    
-              <div class="group">      
-      <input type="text" id="oberschenkel_falte" name="caliper_input" required>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Oberschenkel</label>        
-    </div>
-             
-             <div class="group">      
-      <input type="text" id="schulterblatt_falte" name="caliper_input" required>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Schulterblatt</label>
-             </div>
-             
-                <div class="group">      
-      <input type="text" id="trizeps_falte" name="caliper_input" required>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Trizeps</label>
-             </div>
-              <div class="group">      
-      <input type="text" id="achsel_falte" name="caliper_input" required>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Achsel</label>
-             </div>
-              <div class="group">      
-      <input type="text" id="hueft_falte" name="caliper_input" required>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Hüfte</label>
-             </div>
-             
-             <div class="group">      
-      <input type="text" id="caliper_input" name="caliper_input" required>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Alter</label>
-             </div>
-                     
-             <div class="group">      
-      <input id="caliper_fat_result" name="caliper_input" type="text" readonly>
-      
-             </div>
-  </form>
-        
-         <input name="berechnen" onClick="caliper_calculateFat();" type="submit" value="Körperfettanteil ermitteln">
-
-        <script language="JavaScript">
-            <!--
-            function caliper_calculateFat() {
-
-                var method = document.getElementById('caliper_method').value;
-                var gender = document.getElementById('caliper_gender').value;
-                var kfa;
-                if (method == 31) {
-                    var alter = parseFloat(document.getElementById('caliper_alter').value);
-                    if (gender == 0) {
-                        var brust = parseFloat(document.getElementById('brust_falte').value);
-                        var bauch = parseFloat(document.getElementById('bauch_falte').value);
-                        var oberschenkel = parseFloat(document.getElementById('oberschenkel_falte').value);
-                        var sum = brust + bauch + oberschenkel;
-                        var d = 1.1093800 - 0.0008267 * sum + 0.0000016 * sum * sum - 0.0002574 * alter;
-                        kfa = 495 / d - 450;
-                    } else if (gender == 1) {
-                        var trizeps = parseFloat(document.getElementById('trizeps_falte').value);
-                        var bauch = parseFloat(document.getElementById('bauch_falte').value);
-                        var huefte = parseFloat(document.getElementById('hueft_falte').value);
-                        var sum = trizeps + bauch + huefte;
-                        var d = 1.0902369 - 0.0009379 * sum + 0.0000026 * sum * sum - 0.00000979 * alter;
-                        kfa = 495 / d - 450;
-                    }
-                } else if (method == 7) {
-                    var alter = parseFloat(document.getElementById('caliper_alter').value);
-                    var brust = parseFloat(document.getElementById('brust_falte').value);
-                    var bauch = parseFloat(document.getElementById('bauch_falte').value);
-                    var achsel = parseFloat(document.getElementById('achsel_falte').value);
-                    var schulterblatt = parseFloat(document.getElementById('schulterblatt_falte').value);
-                    var huefte = parseFloat(document.getElementById('hueft_falte').value);
-                    var oberschenkel = parseFloat(document.getElementById('oberschenkel_falte').value);
-                    var trizeps = parseFloat(document.getElementById('trizeps_falte').value);
-                    var sum = brust + bauch + achsel + schulterblatt + huefte + oberschenkel + trizeps;
-                    var d;
-                    if (gender == 0) {
-                        d = 1.112 - 0.00043499 * sum + 0.00000055 * sum * sum - 0.00028826 * alter;
-                    } else if (gender == 1) {
-                        d = 1.0970 - 0.00046971 * sum + 0.00000056 * sum * sum - 0.00012828 * alter;
-                    }
-                    kfa = 495 / d - 450;
-                }
-                kfa = Math.round(kfa * 100) / 100;
-                document.getElementById('caliper_fat_result').value = kfa;
-            }
-
-            function log10(arg) {
-                return Math.log(arg) / Math.LN10;
-            }
-
-            function caliper_onGenderChange() {
-                var method = document.getElementById('caliper_method').value;
-                if (method == 31) {
-                    var gender = document.getElementById('caliper_gender').value;
-                    var trizeps = document.getElementById('trizeps_falte');
-                    var huefte = document.getElementById('hueft_falte');
-                    var brust = document.getElementById('brust_falte');
-                    var oberschenkel = document.getElementById('oberschenkel_falte');
-                    if (gender == 0) {
-                        enable(brust);
-                        enable(oberschenkel);
-                        disable(trizeps);
-                        disable(huefte);
-                    } else if (gender == 1) {
-                        disable(brust);
-                        disable(oberschenkel);
-                        enable(trizeps);
-                        enable(huefte);
-                    }
-                }
-            }
-
-            function caliper_onMethodChange() {
-                var method = document.getElementById('caliper_method').value;
-                var gender = document.getElementById('caliper_gender').value;
-                var allElements = document.getElementsByName("caliper_input");
-                for (var i = 0; i < allElements.length; i++) {
-                    disable(allElements[i]);
-                }
-                if (method == 31) {
-                    var alter = document.getElementById('caliper_alter');
-                    enable(alter);
-                    if (gender == 0) {
-                        var brust = document.getElementById('brust_falte');
-                        var bauch = document.getElementById('bauch_falte');
-                        var oberschenkel = document.getElementById('oberschenkel_falte');
-                        enable(brust);
-                        enable(bauch);
-                        enable(oberschenkel);
-                    } else if (gender == 1) {
-                        var trizeps = document.getElementById('trizeps_falte');
-                        var bauch = document.getElementById('bauch_falte');
-                        var huefte = document.getElementById('hueft_falte');
-                        enable(trizeps);
-                        enable(bauch);
-                        enable(huefte);
-                    }
-                } else if (method == 7) {
-                    var alter = document.getElementById('caliper_alter');
-                    enable(alter);
-                    var brust = document.getElementById('brust_falte');
-                    var bauch = document.getElementById('bauch_falte');
-                    var achsel = document.getElementById('achsel_falte');
-                    var schulterblatt = document.getElementById('schulterblatt_falte');
-                    var huefte = document.getElementById('hueft_falte');
-                    var oberschenkel = document.getElementById('oberschenkel_falte');
-                    var trizeps = document.getElementById('trizeps_falte');
-                    enable(brust);
-                    enable(bauch);
-                    enable(achsel);
-                    enable(schulterblatt);
-                    enable(huefte);
-                    enable(oberschenkel);
-                    enable(trizeps);
-                }
-
-                var kfa = document.getElementById('caliper_fat_result');
-                kfa.style.backgroundColor = "#F6F6F6";
-                enable(kfa);
-            }
-
-        </script>
-
+        <div id="javascript_error">
+            <span style="font-size:24pt;">Bitte aktivieren Sie JavaScript<br/></span>
+            <span style="font-size:16pt;">(Diese Webseite funktioniert nicht ohne JavaScript)</span>
+        </div>
         <script type="text/javascript">
-            window.addEventListener('load', xr_aeh, false);
-
+            $("#javascript_error").remove();
         </script>
-        <!--<![endif]-->
+
+        <div id="header">
+            <h1>Body Fat Calculator</h1>
+        </div>
+
+        <div id="contentWrapper">
+            <h2 id="welcome">Welcome to the Body Fat Calculator</h2>
+            <p id="description">Please insert the results of your caliper 3-point method measurements</p>
+            <center>
+                <img id="genderPic" src="images/female.svg" alt="measurements" height="50%"/>
+                <div>
+                    <small>Author: <a href="https://commons.wikimedia.org/wiki/User:Jmarchn">Jmarchn</a></small>
+                </div>
+                <table>
+                    <tr>
+                        <td colspan="2"><h3>Gender</h3></td>
+                    </tr>
+                    <tr>
+                        <td><input type="radio" name="gender" id="genderFemale" value="female"></td>
+                        <td>Female</td>
+                    </tr>
+                    <tr>
+                        <td><input type="radio" name="gender" id="genderMale" value="male"></td>
+                        <td>Male</td>
+                    </tr>
+                </table>
+
+                <table id="measurements">
+                    <tr>
+                        <td colspan="2"><h3>Measurements</h3></td>
+                    </tr>
+                    <tr>
+                        <td id="ageLabel">Age&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                        <td><input type="text" id="ageInput" size="4"/></td>
+                    </tr>
+                    <tr>
+                        <td id="d0Label"></td>
+                        <td><input type="text" id="d0Input" size="4"/>&nbsp;mm</td>
+                    </tr>
+                    <tr>
+                        <td id="d1Label">Belly</td>
+                        <td><input type="text" id="d1Input" size="4"/>&nbsp;mm</td>
+                    </tr>
+                    <tr>
+                        <td id="d2Label"></td>
+                        <td><input type="text" id="d2Input" size="4"/>&nbsp;mm</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><h3 id="resultHeader">Result</h3></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" id="result">
+                            <center id="resultLabel">
+                                Result
+                            </center>
+                        </td>
+                    </tr>
+                </table>
+            </center>
+        </div>
+
     </div>
+    <script type="text/javascript">
+            // default gender
+            var gender = 'female';
+			var result = 0;
+            function resetLabelsAndValues() {
+                $('#d0Label').text('');
+                $('#d2Label').text('');
+                $('#resultLabel').html('&nbsp');
+                $('#resultHeader').html('&nbsp');
+            }
+            function insertFemaleLabelsAndValues() {
+                resetLabelsAndValues();
+                $('#d0Label').text('Triceps');
+                $('#d2Label').text('Hip');
+                $('#genderPic').attr('src', 'images/female.svg');
+            }
+            function insertMaleLabelsAndValues() {
+                resetLabelsAndValues();
+                $('#d0Label').text('Breast');
+                $('#d2Label').text('Thigh');
+                $('#genderPic').attr('src', 'images/male.svg');
+            }
+			function calculateResult() {
+				var age = parseInt($('#ageInput').val());
+				var d0 = parseInt($('#d0Input').val());
+				var d1 = parseInt($('#d1Input').val());
+				var d2 = parseInt($('#d2Input').val());
+				if(!isNaN(age) && !isNaN(d0) && !isNaN(d1) && !isNaN(d2)) {
+					// do calculation
+					// https://de.wikipedia.org/wiki/Calipometrie
+					var S = d0 + d1 + d2;
+						
+					var k0 = 0;
+					var k1 = 0;
+					var k2 = 0;
+					var ka = 0;
+					if(gender == 'female') {
+						k0 = 1.10938;
+						k1 = -0.0008267;
+						k2 = 0.0000016;
+						ka = -0.0002574;
+					} 
+					if(gender == 'male') {
+						k0 = 1.089733;
+						k1 = -0.0009245;
+						k2 = 0.0000056;
+						ka = -0.00012828;
+					}
+					var result = (495/(k0 + (k1*S) + (k2 * S*S) + (ka * age))) - 450;
+                    $('#resultHeader').text('Result');
+                	$('#resultLabel').text(Math.round(result) + " %");
+				} else{
+                	$('#resultLabel').html('&nbsp');
+                    $('#resultHeader').html('&nbsp');
+				}
+			}
+            $('input[type=radio][name=gender]').change(function(e) {
+                if(this.value == 'female') {
+                    console.log("selected female");
+                    gender = 'female';
+                    insertFemaleLabelsAndValues();
+					calculateResult();
+                }
+                else if(this.value == 'male') {
+                    console.log("selected male");
+                    gender = 'male';
+                    insertMaleLabelsAndValues();
+					calculateResult();
+                }
+            });
+			$('#ageInput').keyup(function(e) { 
+				this.value = this.value.replace(/(0|[^0-9])/g,'');
+				calculateResult();
+			});
+			$('#d0Input,#d1Input,#d2Input').keyup(function(e) { 
+				this.value = this.value.replace(/[^0-9\.]/g,'') 
+				calculateResult();
+			});
+            // run when page has loaded
+            $(document).ready(function(e) {
+                if(gender == 'female') {
+                    console.log("default female");
+                    $('#genderFemale').prop('checked', 'checked');
+                    insertFemaleLabelsAndValues();
+                }
+                else if(gender == 'male') {
+                    console.log("default male");
+                    $('#genderMale').prop('checked', 'checked');
+                    insertMaleLabelsAndValues();
+                }
+            });
+        </script>
 </body>
 
 </html>
