--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,3 +1,6 @@
-<nav class="pagination" role="pagination">
-    <a href="#" id="loadMore">Load More</a>
-</nav>
+
+
+{{#if next}}
+        <a id="next" href="index2.html">next page?</a>
+
+    {{/if}}
