--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,6 +1,6 @@
 
 
 {{#if next}}
-        <a id="next" href="index2.html">next page?</a>
+        <a id="next" href="{{pageUrl next}}">next page?</a>
 
     {{/if}}
