--- a/default.hbs
+++ b/default.hbs
@@ -50,9 +50,9 @@
         maxPage         : 3,
 //		prefill			: true,
 //		path: ["http://nuvique/infinite-scroll/test/index", ".html"]
-//		path: function(index) {
-//			return "index" + index + ".html";
-//		}
+		path: function(page) {
+			return "page";
+		}
 		// behavior		: 'twitter',
 		// appendCallback	: false, // USE FOR PREPENDING
 		// pathParse     	: function( pathStr, nextPage ){ return pathStr.replace('2', nextPage ); }
