--- a/default.hbs
+++ b/default.hbs
@@ -45,8 +45,8 @@
 		navSelector  	: "#next:last",
 		nextSelector 	: "a#next:last",
 		itemSelector 	: ".article .inner",
-		debug		 	: true,
-		dataType	 	: 'json',
+		debug		 	: false,
+		dataType	 	: 'html',
         maxPage         : 3,
 //		prefill			: true,
 //		path: ["http://nuvique/infinite-scroll/test/index", ".html"]
