--- a/default.hbs
+++ b/default.hbs
@@ -44,7 +44,7 @@
 	$('#timeline').infinitescroll({
 		navSelector  	: "#next:last",
 		nextSelector 	: "a#next:last",
-		itemSelector 	: ".article .inner",
+		itemSelector 	: ".article",
 		debug		 	: false,
 		dataType	 	: 'html',
         maxPage         : 3,
