--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,16 +294,15 @@ header .banner {
   Pagination
 ===============================================================================
 */
-
-.pagination #next {
-    display: inline-block;
-    color: #3A4145;
-    font-size: 1em;
+.pagination {
+    max-width: 150px;
     margin: 100px auto;
     border-radius: 5px;
-    padding: 15px;
-    color: rgba(0, 0, 0, .5);
-    max-width: 150px;
+}
+.pagination #next {
+    color: #3A4145;
+    font-size: 1em;
+    padding: 15px;   
 }
 .box {
     background: #F2F2F2;
