--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,5 +1,5 @@
 <nav class="pagination" role="pagination">
 {{#if next}}
-    <a id="next" href="{{pageUrl next}}">next page?</a>
+    <a id="next" href="{{pageUrl next}}">load more</a>
 {{/if}}
 </nav>
