--- a/default.hbs
+++ b/default.hbs
@@ -34,7 +34,7 @@
     
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="{{asset "js/subbscribe.min.js"}}"></script>
-        <script src="{{asset "js/jquery.infinitescroll.js"}}"></script>
+        <script src="{{asset "js/infinitescroll.min.js"}}"></script>
         <script src="{{asset "js/index.js"}}"></script>
     
     </body>
