--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,6 +308,9 @@ header .banner {
     max-width: 150px;
     margin: 100px auto;
     text-align:center;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
 }
 #infscr-loading img {
     margin: 100px auto;
