--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,6 +310,7 @@ header .banner {
     text-align:center;
     border-radius: 5px;
     background: #fff;
+    z-index: 1000;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
 }
 #infscr-loading img {
