--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,7 +308,7 @@ header .banner {
 #infscr-loading {
     width: 60px;
     height: 50px;
-    padding: 15px 0;
+    padding-top: 15px;
     margin: 100px auto;
     text-align: center;
     border-radius: 100%;
