--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,7 +318,7 @@ header .banner {
     color: #3A4145;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
 }
-#infscr-loading {
+#infscr-loading div{
     line-height: 1.3em;
 }
 .box {
