--- a/default.hbs
+++ b/default.hbs
@@ -17,22 +17,12 @@
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{@blog.logo}}">
     <link rel="shortcut icon" href="{{@blog.logo}}">
-    <style>
-        body {  
-            background:url('{{@blog.cover}}');
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-            width: 100%;
-            }
-    </style>
     
     {{ghost_head}}
 
 </head>
     
-    <body>
+    <body style="background:url('{{@blog.cover}}');-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;width: 100%;">
     
         {{{body}}}
 
