--- a/default.hbs
+++ b/default.hbs
@@ -22,7 +22,7 @@
 
 </head>
     
-    <body style="background:url('{{@blog.cover}}');-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;width: 100%;">
+    <body style="background:url('{{@blog.cover}}');-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;background-attachment:fixed;width: 100%;">
     
         {{{body}}}
 
