--- a/default.hbs
+++ b/default.hbs
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" href="{{@blog.logo}}">
     
     <style>
-    body:before {
+    body:after {
         content: "";
         display: block;
         position: fixed;
