--- a/default.hbs
+++ b/default.hbs
@@ -19,14 +19,14 @@
     <link rel="shortcut icon" href="{{@blog.logo}}">
     
     <style>
-    body:after {
+    body:before {
         content: "";
         display: block;
         position: fixed;
         left: 0;
         top: 0;
         width: 100%;
-        height: 100%;
+        height: 110%;
         z-index: -10;
         background: url({{@blog.cover}}) no-repeat center center;
         -webkit-background-size: cover;
