--- a/assets/css/style Kopie.css
+++ b/assets/css/style Kopie.css
@@ -7,7 +7,7 @@ Url: https://tilligetthere.com
 
 body {
     font-family: Lora, sans-serif;
-    background: #fff;
+    background: #2c3e50;
 }
 a {
     background-color: transparent;
@@ -88,7 +88,7 @@ header #nav li {
 }
 header #nav li a {
     display: block;
-    color: #3A4145;
+    color: #fff;
     font-size: 18px;
     padding: 10px 25px;
     border: 2px solid transparent;
@@ -99,7 +99,7 @@ header #nav li a {
     transition: all 0.3s;
 }
 header #nav li a:hover {
-    border: 2px solid #3A4145;
+    border: 2px solid #fff;
     border-radius: 5px;
 }
 header {
@@ -112,17 +112,17 @@ header .banner {
     margin: 80px auto
 }
 header .banner h1 {
-    color: #3A4145;
+    color: #fff;
     font-family: 'Dancing Script';
     font-size: 4.85em;
     margin-bottom: 1em
 }
 header .banner h1 a {
-    color: #3A4145;
+    color: #fff;
     text-shadow: 1px 1px 2px #222;
 }
 header .banner h2 {
-    color: #3A4145;
+    color: #fff;
     font-size: 1.5em;
     font-style: italic;
     font-weight: 300;
@@ -178,7 +178,7 @@ header .banner {
     margin: 0 0 0 -1px;
     width: 4px;
     height: 102%;
-    background: #E2E9ED;
+    background: rgba(255, 255, 255, 0.6)
 }
 .index-wrapper section#timeline article {
     width: 100%;
@@ -201,7 +201,7 @@ header .banner {
 }
 .index-wrapper section#timeline article div.inner span.date,
 .pagination {
-    background: #E2E9ED;
+    background: #fff;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24)
 }
 .index-wrapper section#timeline article div.inner span.date {
