--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ Url: https://tilligetthere.com
 
 body {
     font-family: Lora, sans-serif;
-    background: #fff;
+    background: #f5f5f5;
 }
 a {
     background-color: transparent;
@@ -119,7 +119,6 @@ header .banner h1 {
 }
 header .banner h1 a {
     color: #3A4145;
-    text-shadow: 1px 1px 2px #222;
 }
 header .banner h2 {
     color: #3A4145;
@@ -129,7 +128,6 @@ header .banner h2 {
     line-height: 1.5;
     margin: 0 auto;
     width: 50%;
-    text-shadow: 1px 1px 2px #222;
 }
 .pagination,
 header .banner {
@@ -176,9 +174,9 @@ header .banner {
     left: 50%;
     top: 0;
     margin: 0 0 0 -1px;
-    width: 4px;
+    width: 2px;
     height: 102%;
-    background: #E2E9ED;
+    background: #3A4145;
 }
 .index-wrapper section#timeline article {
     width: 100%;
@@ -201,7 +199,7 @@ header .banner {
 }
 .index-wrapper section#timeline article div.inner span.date,
 .pagination {
-    background: #E2E9ED;
+    background: #fff;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24)
 }
 .index-wrapper section#timeline article div.inner span.date {
@@ -346,7 +344,7 @@ header .banner {
 footer,
 footer a {
     font-size: 12px;
-    color: #fff;
+    color: #3A4145;
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
