--- a/index.hbs
+++ b/index.hbs
@@ -4,7 +4,11 @@
     {{navigation}}
 
     <section class="banner" role="banner">
+        {{#if @blog.logo}}
+        <img src="{{@blog.logo}}" alt="Blog Logo">
+        {{else}}
         <h1><a href="{{@blog.url}}">{{@blog.title}}</a></h1>
+        {{/if}}
         <h2>{{@blog.description}}</h2>
     </section>
 </header>
