--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ header #nav li {
 }
 header #nav li a {
     display: block;
-    color: #868696;
+    color: #7b8993;
     font-size: 18px;
     padding: 10px 25px;
     border: 2px solid transparent;
@@ -115,16 +115,22 @@ header:after {
 header .banner {
     margin: 30px auto
 }
+header .banner img {
+    max-width: 150px;
+    height: auto;
+    margin: 0 auto;
+    margin-bottom: 0.8em;
+}
 header .banner h1 {
     color: #3A4145;
     font-size: 4.85em;
-    margin-bottom: 1em
+    margin-bottom: 0.8em
 }
 header .banner h1 a {
     color: #3A4145;
 }
 header .banner h2 {
-    color: #868696;
+    color: #7b8993;
     font-size: 1.5em;
     font-style: italic;
     font-weight: 300;
