--- a/default.hbs
+++ b/default.hbs
@@ -20,8 +20,8 @@
     <style>
     header {
     position: relative;
-    margin: 20px;
-    max-width: 1140px;   
+    margin: 20px auto;
+    max-width: 1100px;   
     background: rgba(52, 164, 202, 0.66);
     background: -webkit-linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent), url(@blog.cover);
     background: -moz-linear-gradient(-45deg, rgba(52, 164, 202, 0.66)0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent), url(@blog.cover);
