--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ header #nav li {
 }
 header #nav li a {
     display: block;
-    color: #7b8993;
+    color: #fff;
     font-size: 18px;
     padding: 10px 25px;
     border: 2px solid transparent;
@@ -99,9 +99,9 @@ header #nav li a {
     transition: all 0.3s;
 }
 header #nav li a:hover {
-    border: 2px solid #868696;
+    border: 2px solid #fff;
     border-radius: 5px;
-    color: #23527c;
+    color: #fff;
 }
 header .banner {
     margin: 30px auto
@@ -113,19 +113,16 @@ header .banner img {
     margin-bottom: 0.8em;
 }
 header .banner h1 {
-    color: #3A4145;
+    color: #fff;
     font-size: 4.85em;
     margin-bottom: 0.8em
 }
 header .banner h1 a {
-    color: #3A4145;
-}
-header .banner h1 a:hover {
-    color: #23527c;
+    color: #fff;
 }
 header .banner h2 {
-    color: #7b8993;
-    font-size: 1.5em;
+    color: #fff;
+    font-size: 1.3em;
     font-style: italic;
     font-weight: 300;
     line-height: 1.5;
