--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ Url: https://tilligetthere.com
 body {
     font-family: Lora, sans-serif;
     background: #f5f5f5;
+    color: #3A4145;
 }
 a {
     background-color: transparent;
