--- a/default.hbs
+++ b/default.hbs
@@ -17,7 +17,7 @@
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{@blog.logo}}">
     <link rel="shortcut icon" href="{{@blog.logo}}">
-    {{#is home}}
+    {{#is "home"}}
     <style>
     header {
     position: relative;
