--- a/default.hbs
+++ b/default.hbs
@@ -22,7 +22,7 @@
     header {
     position: relative;
     margin: 20px auto;
-    max-width: 1100px;   
+    max-width: 80%;   
     background: rgba(52, 164, 202, 0.66);
     background: -webkit-linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent), url(@blog.cover);
     background: -moz-linear-gradient(-45deg, rgba(52, 164, 202, 0.66)0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent), url(@blog.cover);
@@ -39,14 +39,16 @@
     header #nav li a {
     color: #fff;
         }
+        </style>
     {{else}}
+        <style>
     header {
         position: relative;
         width: 100%;
         text-align:center;
         height: 50px;
         }
-         header #nav li a {
+    header #nav li a {
     color: #3A4145;
         }
         {{/is}}
