--- a/default.hbs
+++ b/default.hbs
@@ -20,8 +20,8 @@
     {{#is "home"}}
     <style>
     header {
-    position: relative;
     margin: 20px auto;
+    padding-bottom: 20px;    
     max-width: 80%;   
     background: rgba(52, 164, 202, 0.66);
     background: -webkit-linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent), url(@blog.cover);
@@ -30,7 +30,7 @@
     background: linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent), url(@blog.cover);
 	background-size: cover, cover;
 	background-position: center, center;
-	height: 60vh;
+	height: auto;
 	width: 100%;
 	justify-content: center;
 	align-items: center;
@@ -48,7 +48,7 @@
         text-align:center;
         height: 50px;
         }
-    header #nav li a {
+    header #nav li a, header #nav li a:hover {
     color: #3A4145;
         }
         {{/is}}
