--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ header .banner {
 */
 
 .post-wrapper {
-    margin: 6% auto 0;
+    margin: 60px auto 0;
     background: #fff;
     padding: 30px;
     max-width: 840px;
